dropshot/tests/fail/bad_endpoint6.stderr
error: expected identifier, found `"Oxide"`
  --> $DIR/bad_endpoint6.rs:24:29
   |
24 |     Ok(HttpResponseOk(Ret { "Oxide".to_string(), 0x1de }))
   |                       ---   ^^^^^^^ expected identifier
   |                       |
   |                       while parsing this struct

error: expected identifier, found `0x1de`
  --> $DIR/bad_endpoint6.rs:24:50
   |
24 |     Ok(HttpResponseOk(Ret { "Oxide".to_string(), 0x1de }))
   |                       ---                        ^^^^^ expected identifier
   |                       |
   |                       while parsing this struct

error: expected identifier or integer
  --> $DIR/bad_endpoint6.rs:24:29
   |
24 |     Ok(HttpResponseOk(Ret { "Oxide".to_string(), 0x1de }))
   |                             ^^^^^^^
